--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Gnere"
+                android:textColor="@color/black"
                 android:textSize="18dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -46,6 +47,7 @@
                 android:layout_centerHorizontal="true"
                 android:scrollbars="none"
                 android:layout_margin="5dp"
+
              />
 
             <androidx.recyclerview.widget.RecyclerView
