--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:text="Recently Watched"
                 android:textStyle="bold"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="2dp"
                 android:padding="5dp"
                 android:textColor="@color/black"
                 android:textSize="18dp"/>
@@ -57,14 +57,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/genreListView"
                 android:scrollbars="none"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
                 android:visibility="visible" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Genres"
                 android:textStyle="bold"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="2dp"
                 android:padding="5dp"
                 android:textColor="@color/black"
                 android:textSize="18dp"/>
@@ -76,7 +76,7 @@
                 android:layout_below="@+id/pager2"
                 android:layout_centerHorizontal="true"
                 android:scrollbars="none"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
 
              />
 
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:text="Latest Releases"
                 android:textStyle="bold"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="2dp"
                 android:padding="5dp"
                 android:textColor="@color/black"
                 android:textSize="18dp"/>
@@ -95,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/my_recycler_view"
-                android:layout_margin="5dp"
+                android:layout_margin="3dp"
                 android:orientation="horizontal">
 
                 <HorizontalScrollView
@@ -111,7 +111,7 @@
                     android:id="@+id/latest_movies"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/latestvideos_bkg"
                     android:textColor="@color/white"
                     android:text="MOVIES" />
@@ -120,7 +120,7 @@
                     android:id="@+id/latest_webseries"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/latestvideos_bkg"
                     android:textColor="@color/white"
                     android:text="Webseries" />
@@ -129,7 +129,7 @@
                     android:id="@+id/latest_shortfilms"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/latestvideos_bkg"
                     android:textColor="@color/white"
                     android:text="Short Films" />
@@ -138,7 +138,7 @@
                     android:id="@+id/latest_songs"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:background="@drawable/latestvideos_bkg"
                     android:textColor="@color/white"
                     android:text="Songs" />
