--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3752E9</color>
+    <color name="colorPrimary">#293FB9</color>
     <color name="colorPrimaryDark">#0B539E</color>
     <color name="colorAccent">#3752E9</color>
-    <color name="appBackgroundColor">#A09D9D</color>
+    <color name="appBackgroundColor">#CCC9C9</color>
     <color name="white">#ffffff</color>
     <color name="layoutBackgroundColor">#F5F2F2</color>
     <color name="border_color">#000000</color>
