--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/my_recycler_view"
                 android:layout_margin="3dp"
                 android:orientation="horizontal">
 
@@ -31,11 +30,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:layout_marginBottom="15dp">
 
                         <Button
                             android:id="@+id/latest_movies"
-                            android:layout_width="50dp"
+                            android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
@@ -44,7 +44,7 @@
 
                         <Button
                             android:id="@+id/latest_webseries"
-                            android:layout_width="50dp"
+                            android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
@@ -53,7 +53,7 @@
 
                         <Button
                             android:id="@+id/latest_shortfilms"
-                            android:layout_width="50dp"
+                            android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
@@ -62,7 +62,7 @@
 
                         <Button
                             android:id="@+id/latest_songs"
-                            android:layout_width="50dp"
+                            android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
@@ -99,30 +99,16 @@
 
                 />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Recently Watched"
-                android:textStyle="bold"
-                android:layout_marginLeft="2dp"
-                android:padding="5dp"
-                android:textColor="@color/black"
-                android:textSize="18dp"/>
+
+
 
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/genreListView"
-                android:scrollbars="none"
-                android:layout_margin="2dp"
-                android:visibility="visible" />
-
-
-
-
-
+                android:background="@color/transparent"
+                android:scrollbars="none" />
 
 
         </LinearLayout>
