--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,62 @@
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <!-- The toolbar -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:fitsSystemWindows="true"
+        android:layout_height="wrap_content">
 
-
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
-
-
+        <include layout="@layout/toolbar"
+            android:id="@+id/toolbar"/>
 
         <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:id="@+id/drawer_button"
+            android:layout_width="50dp"
+            android:layout_height="?attr/actionBarSize"
+            android:fitsSystemWindows="true"
+            android:layout_alignParentLeft="true"
+            android:clickable="true">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:src="@drawable/ic_action_not_black" />
+        </FrameLayout>
 
 
+    </RelativeLayout>
 
-        <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="#ffffff"
+        android:layout_height="match_parent"
+        tools:openDrawer="start">
+
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/appBackgroundColor"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/darker_gray"
-            android:dividerHeight="1dp" />
+            android:fitsSystemWindows="true"
+            android:background="#ffffff"
+            app:itemTextColor="#1d3f4c"
+            app:itemIconTint="#cd4312"
+            android:clickable="true"
+            app:headerLayout="@layout/nav_header_main"
+            app:menu="@menu/activity_main_drawer" />
 
 
+    </androidx.drawerlayout.widget.DrawerLayout>
 
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
