--- a/app/src/main/res/layout/bannerlist_item.xml
+++ b/app/src/main/res/layout/bannerlist_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/genreViewLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,10 +18,11 @@
         <ImageView
             android:id="@+id/movieImageView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:adjustViewBounds="true"
-            android:layout_margin="5dp"
             android:background="@drawable/reg_screen_landscape" />
 
 
