--- a/app/src/main/res/layout/list_view_item_row.xml
+++ b/app/src/main/res/layout/list_view_item_row.xml
@@ -1,9 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:padding="10dp" >
+  >
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:background="?android:attr/activatedBackgroundIndicator"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:padding="10dp" >
 
     <ImageView
         android:id="@+id/imageViewIcon"
@@ -24,5 +32,6 @@
         android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         />
+    </RelativeLayout>
 
 </RelativeLayout>
