--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:background="@color/white"
+    android:layout_height="@dimen/nav_header_height"
+    android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="600dp"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
-    <ImageView
-        android:id= "@+id/imageView"
-        android:layout_width= "wrap_content"
-        android:layout_height= "wrap_content"
-        android:contentDescription= "Data"
-        android:paddingTop= "15dp"
-        app:srcCompat= "@mipmap/ic_launcher_round" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageView"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:src="@drawable/profile" />
+
     <TextView
-        android:layout_width= "match_parent"
-        android:layout_height= "wrap_content"
-        android:paddingTop= "10dp"
-        android:text= "Flimy+"
-        android:textAppearance= "@style/TextAppearance.AppCompat.Body1" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="Anupam Chugh"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
     <TextView
-        android:id= "@+id/textView"
-        android:layout_width= "wrap_content"
-        android:layout_height= "wrap_content"
-        android:text= "Detail" />
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="www.journaldev.com" />
+
 </LinearLayout>
