--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
     <color name="windowBackground">#00000000</color>
     <color name="latest_bkg">#CA0D0D</color>
     <color name="text_color">#000000</color>
+    <color name="dark">#00ff00</color>
 
 
 </resources>
