--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,68 +2,69 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true">
 
         <LinearLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/white">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
+                android:layout_margin="1dp"
                 android:orientation="horizontal">
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:scrollbars="none"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="15dp">
+
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/latest_movies"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
-                            android:textColor="@color/white"
-                            android:text="MOVIES" />
+                            android:text="MOVIES"
+                            android:textColor="@color/white" />
 
                         <Button
                             android:id="@+id/latest_webseries"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
-                            android:textColor="@color/white"
-                            android:text="Webseries" />
+                            android:text="Webseries"
+                            android:textColor="@color/white" />
 
                         <Button
                             android:id="@+id/latest_shortfilms"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
-                            android:textColor="@color/white"
-                            android:text="Short Films" />
+                            android:text="Short Films"
+                            android:textColor="@color/white" />
 
                         <Button
                             android:id="@+id/latest_songs"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="40dp"
                             android:layout_margin="5dp"
                             android:background="@drawable/latestvideos_bkg"
                             android:text="Songs"
@@ -72,8 +73,17 @@
                 </HorizontalScrollView>
 
 
-
             </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/bannerpager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
+                android:background="#00000000"
+                android:scrollbars="none"
+
+                />
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -81,21 +91,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
                 android:scrollbars="none"
-                android:layout_margin="5dp"
-
-                />
-
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/bannerpager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pager2"
-                android:layout_centerHorizontal="true"
-                android:scrollbars="none"
-                android:layout_margin="5dp"
+                android:visibility="gone"
 
                 />
 
