--- a/app/src/main/res/layout/circularimglist_item.xml
+++ b/app/src/main/res/layout/circularimglist_item.xml
@@ -17,6 +17,7 @@
         android:src="@drawable/logo"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
+        android:background="@color/transparent"
       android:id="@+id/circularImageView"
         app:civ_shadow_radius="10"
         app:civ_shadow_color="#3f51b5"/>
