--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,12 +2,12 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true">
 
         <LinearLayout
@@ -74,6 +74,17 @@
 
 
             </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/adspager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
+                android:scrollbars="none"
+
+                />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/bannerpager"
                 android:layout_width="match_parent"
@@ -84,21 +95,6 @@
                 android:scrollbars="none"
 
                 />
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/adspager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="2dp"
-                android:scrollbars="none"
-                android:visibility="gone"
-
-                />
-
-
-
 
 
             <androidx.recyclerview.widget.RecyclerView
