--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/appBackgroundColor"
     android:orientation="vertical">
+   <!-- <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>-->
 
     <TextView
         android:id="@+id/categoryTitle"
