--- a/app/src/main/res/layout/activity_single_part.xml
+++ b/app/src/main/res/layout/activity_single_part.xml
@@ -137,6 +137,14 @@
                         android:textColor="@color/black"
                         android:textSize="20dp" />
 
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+
+                        android:src="@drawable/ic_share_black_24dp" />
+
 
                 </LinearLayout>
 
