--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,7 +31,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="76dp"
                         android:orientation="horizontal">
 
                         <Button
@@ -39,39 +39,39 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
                             android:background="@color/transparent"
                             android:drawableTop="@drawable/home_movies"
                             android:text="Movies"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/homeTextColor" />
 
                         <Button
                             android:id="@+id/latest_webseries"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
                             android:background="@color/transparent"
                             android:drawableTop="@drawable/home_webseries"
                             android:text="Web Series"
-                            android:textColor="@color/white"  />
+                            android:textColor="@color/homeTextColor"  />
 
                         <Button
                             android:id="@+id/latest_shortfilms"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginBottom="5dp"
                             android:layout_marginLeft="10dp"
                             android:background="@color/transparent"
                             android:drawableTop="@drawable/home_shortmovie"
                             android:text="Short Films"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/homeTextColor" />
 
                         <Button
                             android:id="@+id/latest_songs"
@@ -79,12 +79,12 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
                             android:text="Songs"
                             android:background="@color/transparent"
                             android:drawableTop="@drawable/home_songs"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/homeTextColor" />
 
                     </LinearLayout>
                 </HorizontalScrollView>
@@ -104,7 +104,7 @@
 
                 />
 
-            <androidx.recyclerview.widget.RecyclerView
+           <!-- <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/bannerpager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
                 android:scrollbars="none"
 
                 />
-
+-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
